[tool.poetry]
name = "dependency-graph"
version = "0.0.1"
description = "Construct a Repo-Specific Semantic Graph of a project. For simplicity, the Python package name is called `dependency_graph`."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gitpython = "^3.1.40"
networkx = "^3.2.1"
jedi = "^0.19.1"
pyvis = "^0.3.2"
dataclasses-json = "^0.6.3"
mypy = "^1.8.0"
ipysigma = "^0.24.2"
tree-sitter = "^0.21.2"
chardet = "^5.2.0"
fs = "^2.4.16"

[[tool.poetry.source]]
name = "tsinghua-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.1"
pytest-unordered = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
